themes/css/jqtouch.css
/* ... */
/* line 195, ../scss/include/_skeleton.scss */
#jqt .grayButton {
  background-image: none;
  background-color: #444444;
  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #6a6a6a), color-stop(50%, #515151), color-stop(51%, #444444), color-stop(100%, #373737));
  background-image: -webkit-linear-gradient(top, #6a6a6a, #515151 50%, #444444 51%, #373737);
  background-image: linear-gradient(top, #6a6a6a, #515151 50%, #444444 51%, #373737);
  color: white;
  text-shadow: #2b2b2b 0 -1px 0;
}
/* line 200, ../scss/include/_skeleton.scss */
#jqt .redButton {
  background-image: none;
  background-color: #d83b38;
  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e57a78), color-stop(50%, #dc504d), color-stop(51%, #d83b38), color-stop(100%, #ce2c28));
  background-image: -webkit-linear-gradient(top, #e57a78, #dc504d 50%, #d83b38 51%, #ce2c28);
  background-image: linear-gradient(top, #e57a78, #dc504d 50%, #d83b38 51%, #ce2c28);
  color: white;
  text-shadow: #b92724 0 -1px 0;
}
/* line 204, ../scss/include/_skeleton.scss */
#jqt .redButton.active, #jqt .redButton:active {
  background-image: none;
  background-color: #c12926;
  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #de5856), color-stop(50%, #d52e2b), color-stop(51%, #c12926), color-stop(100%, #ac2422));
  background-image: -webkit-linear-gradient(top, #de5856, #d52e2b 50%, #c12926 51%, #ac2422);
  background-image: linear-gradient(top, #de5856, #d52e2b 50%, #c12926 51%, #ac2422);
  color: white;
  text-shadow: #97201e 0 -1px 0;
}
/* line 211, ../scss/include/_skeleton.scss */
#jqt .greenButton {
  background-image: none;
  background-color: #53b401;
  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #76fe04), color-stop(50%, #5fcd01), color-stop(51%, #53b401), color-stop(100%, #479b01));
  background-image: -webkit-linear-gradient(top, #76fe04, #5fcd01 50%, #53b401 51%, #479b01);
  background-image: linear-gradient(top, #76fe04, #5fcd01 50%, #53b401 51%, #479b01);
  color: white;
  text-shadow: #3c8101 0 -1px 0;
}
/* line 216, ../scss/include/_skeleton.scss */
#jqt .leftButton, #jqt .cancel, #jqt .back {
  left: 6px;
  right: auto;
}
/* line 221, ../scss/include/_skeleton.scss */
#jqt .add {
  font-size: 24px;
  line-height: 24px;
  font-weight: bold;
}
/* line 229, ../scss/include/_skeleton.scss */
#jqt ul {
  padding: 0;
  margin: 5px 10px 10px 10px;
  -webkit-margin-collapse: separate;
}
/* line 231, ../scss/include/_skeleton.scss */
#jqt ul, #jqt ul.individual li {
  background-color: #555658;
  color: #d5d6d7;
  text-shadow: #3c3d3e 0 -1px 0;
  border: 1px solid #2f3031;
  font: bold 18px "Helvetica Neue", Helvetica;
}
/* line 240, ../scss/include/_skeleton.scss */
#jqt ul:first-child {
  margin-top: 15px;
}
/* line 246, ../scss/include/_skeleton.scss */
#jqt ul li {
  border-top: 1px solid #48494b;
  list-style-type: none;
  overflow: hidden;
  padding: 10px;
  -webkit-transform: translate3d(0, 0, 0);
  /* expensive way to avoid flickr */
}
/* line 253, ../scss/include/_skeleton.scss */
#jqt ul li a {
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: block;
  padding: 10px;
  margin: -10px;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-transform: translateZ(0);
  color: white;
  text-shadow: #3c3d3e 0 -1px 0;
}
/* line 265, ../scss/include/_skeleton.scss */
#jqt ul li a.active {
  background-image: none;
  background-color: #53b401;
  -webkit-box-shadow: #5cc801 0 1px 0px inset;
  box-shadow: #5cc801 0 1px 0px inset;
  color: white;
  text-shadow: #3c8101 0 -1px 0;
}
/* line 270, ../scss/include/_skeleton.scss */
#jqt ul li a.active small {
  color: #a0fe50;
  text-shadow: black 0 -1px 0;
}
/* line 271, ../scss/include/_skeleton.scss */
#jqt ul li a.active small.counter {
  background-color: #306801;
}
/* line 280, ../scss/include/_skeleton.scss */
#jqt ul li small {
  color: #53b401;
  font: 16px "Helvetica Neue", Helvetica;
  text-align: right;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: block;
  width: 23%;
  position: relative;
  z-index: 20;
  float: right;
  line-height: 16px;
  padding: 2px 8px 4px 8px;
}
/* line 295, ../scss/include/_skeleton.scss */
#jqt ul li small.counter {
  background: #2f3031;
  color: #949698;
  text-shadow: #0a0a0a 0 -1px 0;
  z-index: 10;
  font-size: 16px;
  font-weight: bold;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  display: block;
  width: auto;
}
/* line 311, ../scss/include/_skeleton.scss */
#jqt ul li ::-webkit-input-placeholder {
  color: #949698;
  text-shadow: #3c3d3e 0 -1px 0;
}
/* line 322, ../scss/include/_skeleton.scss */
#jqt ul li input[type="text"], #jqt ul li input[type="password"], #jqt ul li input[type="tel"], #jqt ul li input[type="number"], #jqt ul li input[type="search"], #jqt ul li input[type="email"], #jqt ul li input[type="url"], #jqt ul li textarea, #jqt ul li select {
  color: white;
  text-shadow: #3c3d3e 0 -1px 0;
  background: transparent url("data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==");
  border: 0;
  font: normal 17px "Helvetica Neue", Helvetica;
  padding: 0;
  display: inline-block;
  margin-left: 0px;
  width: 100%;
  -webkit-appearance: textarea;
}
/* line 333, ../scss/include/_skeleton.scss */
#jqt ul li textarea {
  height: 120px;
  padding: 0;
  text-indent: -2px;
}
/* line 338, ../scss/include/_skeleton.scss */
#jqt ul li input[type="checkbox"], #jqt ul li input[type="radio"] {
  margin: 0;
  padding: 10px;
}
/* ... */

